<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="election_image">Election Image</string>
    <string name="upcoming_elections_button">Upcoming Elections Button</string>
    <string name="find_my_representative_button">Find My Representative Button</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="election_name">Election Name</string>
    <string name="election_date_and_time">Election Date and Time</string>
    <string name="voter_information_header">Election Information</string>
    <string name="voting_location">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="followed">Follow Election</string>
    <string name="unfollowed">UnFollow Election</string>
    <string name="access">You can only access the viewModel after onViewCreated</string>
    <string name="representative_title">Representative Search</string>
    <string name="address_line_one">Address Line 1</string>
    <string name="address_line_two">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representative">My Representatives</string>
    <string name="representativePhoto">Representative Photo</string>
    <string name="facebookIcon">Facebook Icon</string>
    <string name="twitterPhoto">twitter Icon</string>
    <string name="wwwIcon">Internet Icon</string>
    <string name="voterIncomplete">Can not follow Incomplete Election with missing data</string>
    <string name="no_network">No Internet Connection</string>


    <!-- TODO: Add necessary string values -->

</resources>
