<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/colorAccent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/representativePhoto"
                android:contentDescription="@string/representativePhoto"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:profileImage="@{representative.official.photoUrl}"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="32dp"
                android:text="@{representative.office.name}"
                app:layout_constraintStart_toEndOf="@+id/representativePhoto"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="15dp"
                android:text="@{representative.official.name}"
                app:layout_constraintStart_toEndOf="@+id/representativePhoto"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="16dp"
                android:text="@{representative.official.party}"
                app:layout_constraintStart_toEndOf="@+id/representativePhoto"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <ImageView
                android:id="@+id/wwwIcon"
                android:contentDescription="@string/wwwIcon"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:srcCompat="@drawable/ic_www" />

            <ImageView
                android:id="@+id/facebookIcon"
                android:contentDescription="@string/facebookIcon"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/twitterIcon"
                app:layout_constraintStart_toEndOf="@+id/wwwIcon"
                app:srcCompat="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/twitterIcon"
                android:contentDescription="@string/twitterPhoto"
                android:layout_width="30dp"
                android:layout_height="32dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebookIcon"
                app:srcCompat="@drawable/ic_twitter" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="255dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>